--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,112 @@
+
+/* reset */
+/* link to source: https://piccalil.li/blog/a-more-modern-css-reset/ */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1, h2, h3, h4,
+button, input, label {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1, h2,
+h3, h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input, button,
+textarea, select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
+/* ######### */
+
+/* resusable components */
+/* Fonts */
+
+:root {
+    /* primary colours */
+    --clr-primary-red100: hsl(0, 100%, 67%);
+    --clr-primary-orange200: hsl(39, 100%, 56%);
+    --clr-primary-green200: hsl(166, 100%, 37%);
+    --clr-primary-cobalt700: hsl(234, 85%, 45%);
+    
+    /* gradients */
+    --clr-gradient-slate-blue100: hsl(252, 100%, 67%);
+    --clr-gradient-blue700: hsl(241, 81%, 54%);
+    --clr-gradient-violet-blue100: hsla(256, 72%, 46%, 1);
+    --clr-gradient-persian-blue900: hsla(241, 72%, 46%, 0);
+    
+    
+    /* neutral */
+    --clr-neutral-white100: hsl(0, 0%, 100%);
+    --clr-neutral-pale-blue100: hsl(221, 100%, 96%);
+    --clr-neutral-lavender100: hsl(241, 100%, 89%);
+    --clr-neutral-blue700: hsl(224, 30%, 27%);
+    
+    
+}
+
+/* main */
+
+/* attribution */
 .attribution {
     display: none;
 }
